--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,24 @@
 version: '3.3'
-
 services:
-  https-portal:
-    image: steveltn/https-portal:1
+  nginx:
+    image: nginx:1.15-alpine
     ports:
       - "80:80"
       - "443:443"
-    depends_on:
-      - wordpress
-    restart: always
-    environment:
-      DOMAINS: 'example.com -> http://wordpress:80'
-      STAGE: production
-      FORCE_RENEW: true
+    volumes:
+      - ./data/nginx/:/etc/nginx/conf.d
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    command: |
+      /bin/sh -c \
+      'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g "daemon off"'
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    entrypoint: |
+      /bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'
   db:
     image: mysql:5.7
     volumes:
@@ -25,7 +31,6 @@ services:
       MYSQL_DATABASE: wordpress
       MYSQL_USER: wordpress
       MYSQL_PASSWORD: wordpress
-
   wordpress:
     depends_on:
       - db
