--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -14,7 +14,7 @@ server {
 }
 
 server {
-    listen 443;
+    listen 443 ssl;
     server_name chefcelia.me;
 
     ssl_certificate /etc/letsencrypt/live/chefcelia.me/fullchain.pem;
@@ -24,7 +24,10 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass http://example.org;
+        proxy_pass  http://wordpress;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Forwarded-Proto   https;
     }
 }
-
