--- a/dev.yaml
+++ b/dev.yaml
@@ -24,6 +24,7 @@ services:
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
       WORDPRESS_DB_NAME: wordpress
+      ENVIRONMENT: development
     volumes:
       - ./plugins:/var/www/html/wp-content/plugins
 # volumes:
