--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,8 @@ services:
       WORDPRESS_DB_NAME: wordpress
       ENVIRONMENT: production
     volumes:
+      - wordpress_data:/var/www/html/
       - ./plugins:/var/www/html/wp-content/plugins
 volumes:
     db_data: {}
+    wordpress_data: {}
